fix: add wildcard permissions in checker and fix method names